frontend: Add select input for language on settings page

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -30,5 +30,6 @@
   "tie": "tie!",
   "go_to_beginning": "Go to Beginning",
   "previous": "Previous",
-  "next": "Next"
+  "next": "Next",
+  "language": "Language"
 }
