frontend: Add contacts link and copyright on footer

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -31,5 +31,6 @@
   "go_to_beginning": "Go to Beginning",
   "previous": "Previous",
   "next": "Next",
-  "language": "Language"
+  "language": "Language",
+  "contacts_or_bug_reports": "Contacts or Bug Reports"
 }
