--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -31,5 +31,6 @@
   "go_to_beginning": "最初から",
   "previous": "一手戻る",
   "next": "一手進む",
-  "language": "言語"
+  "language": "言語",
+  "contacts_or_bug_reports": "お問合せ・バグ報告"
 }
