frontend: Add responsive navigation bar

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -32,5 +32,6 @@
   "previous": "Previous",
   "next": "Next",
   "language": "Language",
-  "contacts_or_bug_reports": "Contacts or Bug Reports"
+  "contacts_or_bug_reports": "Contacts or Bug Reports",
+  "profile": "Profile"
 }
