--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -32,5 +32,6 @@
   "previous": "一手戻る",
   "next": "一手進む",
   "language": "言語",
-  "contacts_or_bug_reports": "お問合せ・バグ報告"
+  "contacts_or_bug_reports": "お問合せ・バグ報告",
+  "profile": "プロフィール"
 }
