backend & frontend: Add optimal move calculator after finishing a game & fix replays

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -44,5 +44,6 @@
   "see_more": "See More",
   "description": "Top Carcassonner is a platfrom where you can play Carcassonne against AI.",
   "calculating_final_points": "Calculating final points...",
-  "you": "You"
+  "you": "You",
+  "view_replay": "View Replay"
 }
