--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -44,5 +44,6 @@
   "see_more": "すべて見る",
   "description": "Top Carcassonner は AI とカルカソンヌの対戦ができるプラットフォームです。",
   "calculating_final_points": "最終得点を計算しています...",
-  "you": "あなた"
+  "you": "あなた",
+  "view_replay": "リプレイを見る"
 }
