Revert "Allow users to edit their profile image"

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -45,6 +45,5 @@
   "description": "Top Carcassonner is a platfrom where you can play Carcassonne against AI.",
   "calculating_final_points": "Calculating final points...",
   "you": "You",
-  "view_replay": "View Replay",
-  "image": "Image"
+  "view_replay": "View Replay"
 }
