--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -45,6 +45,5 @@
   "description": "Top Carcassonner は AI とカルカソンヌの対戦ができるプラットフォームです。",
   "calculating_final_points": "最終得点を計算しています...",
   "you": "あなた",
-  "view_replay": "リプレイを見る",
-  "image": "画像"
+  "view_replay": "リプレイを見る"
 }
