backend & frontend: Add random match roughly

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -46,5 +46,6 @@
   "calculating_final_points": "Calculating final points...",
   "you": "You",
   "view_replay": "View Replay",
-  "image": "Image"
+  "image": "Image",
+  "random_match": "Random Match"
 }
