--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -46,5 +46,6 @@
   "calculating_final_points": "最終得点を計算しています...",
   "you": "あなた",
   "view_replay": "リプレイを見る",
-  "image": "画像"
+  "image": "画像",
+  "random_match": "ランダムマッチ"
 }
