frontend: Support game between users

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -47,5 +47,9 @@
   "you": "You",
   "view_replay": "View Replay",
   "image": "Image",
-  "random_match": "Random Match"
+  "random_match": "Random Match",
+  "random_match_description": "In this mode, you can play against a randomly matched player. At the moment, the game results do not affect your rating.",
+  "play_random_match": "Search opponents",
+  "cancel": "Cancel",
+  "searching_opponent": "Searching Opponent ..."
 }
