--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -57,5 +57,6 @@
   "try_again": "Try Again",
   "tile_in_hand": "Tile in hand",
   "comment": "Write comments...",
-  "vote": "Vote!"
+  "vote": "Vote!",
+  "vote_results": "Results"
 }
