frontend: Add remaining tiles to problems

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -58,5 +58,9 @@
   "tile_in_hand": "Tile in hand",
   "comment": "Write comments...",
   "vote": "Vote!",
-  "vote_results": "Results"
+  "vote_results": "Results",
+  "created_by": "created by",
+  "problems": "Problems",
+  "problems_description": "You can consider your own move and vote in various given situations of Carcassonne, and can see what other people's moves as well. Once you have voted, you can see all the results.",
+  "remaining_tiles": "Remaining tiles"
 }
