--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -61,6 +61,12 @@
   "vote_results": "投票結果",
   "created_by": "作成者",
   "problems": "どこ置くの問題",
-  "problems_description": "ここではカルカソンヌの特定の盤面について、自分ならどこに置くかを考えて投票したり、他の人が投票した結果を見たりすることができます。自分の投票を完了すると全員の投票結果が見れるようになります。",
-  "remaining_tiles": "残りタイル"
+  "problems_description": "ここではカルカソンヌの特定の盤面について、自分ならどこに置くかを考えて投票したり、他の人が投票した結果を見たりすることができます。自分の投票を完了すると全員の投票結果が見れるようになります。また、新しい問題は毎日 18 時 (日本時間) に公開されます。",
+  "remaining_tiles": "残りタイル",
+  "recent_votes": "最近の投票",
+  "problem_list": "問題一覧",
+  "newest": "新しい順",
+  "oldest": "古い順",
+  "most_voted": "投票の多い順",
+  "least_voted": "投票の少ない順"
 }
