frontend: Add problem proposal link to problems page

--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -68,5 +68,6 @@
   "newest": "新しい順",
   "oldest": "古い順",
   "most_voted": "投票の多い順",
-  "least_voted": "投票の少ない順"
+  "least_voted": "投票の少ない順",
+  "propose_problem": "問題案の提供"
 }
