--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -69,5 +69,9 @@
   "oldest": "古い順",
   "most_voted": "投票の多い順",
   "least_voted": "投票の少ない順",
-  "propose_problem": "問題案の提供"
+  "propose_problem": "問題案の提供",
+  "remaining_tile_count": "残りタイル数",
+  "table_id": "テーブル ID",
+  "propose": "提案する",
+  "placing_tile": "配置するタイル"
 }
