--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -74,5 +74,6 @@
   "remaining_tile_count": "Number of remaining tiles",
   "table_id": "Table ID",
   "propose": "Submit",
-  "placing_tile": "Placing tile"
+  "placing_tile": "Placing tile",
+  "not_authorized": "You are not authorized to view this page."
 }
