--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -74,5 +74,6 @@
   "remaining_tile_count": "残りタイル数",
   "table_id": "テーブル ID",
   "propose": "提案する",
-  "placing_tile": "配置するタイル"
+  "placing_tile": "配置するタイル",
+  "not_authorized": "このページは閲覧できません。"
 }
