--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -75,5 +75,6 @@
   "table_id": "テーブル ID",
   "propose": "提案する",
   "placing_tile": "配置するタイル",
-  "not_authorized": "このページは閲覧できません。"
+  "not_authorized": "このページは閲覧できません。",
+  "thank_you_for_your_proposal": "問題の提案をしていただきありがとうございます！問題の作成とレビューには数日程度かかることがあります。"
 }
