frontend: Fix translation & validation for problem proposal

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -70,11 +70,19 @@
   "most_voted": "Most Voted",
   "least_voted": "Least Voted",
   "propose_problem": "Proposal",
+  "propose_problem_title": "Propose Problems",
+  "propose_problem_description": "You can propose a problem idea by specifying the BGA's table ID, the number of tiles remaining and the placing tile. The table ID is the 9-digit sequence of numbers, which immediately follows the table= in the URL. The number of remaining tiles is the number of tiles shown on the screen for the board in question.",
   "tested_by": "tested by",
   "remaining_tile_count": "Number of remaining tiles",
+  "remaining_tile_count_placeholder": "e.g. 60",
   "table_id": "Table ID",
+  "table_id_placeholder": "e.g. 449689675",
   "propose": "Submit",
   "placing_tile": "Placing tile",
+  "proposed_problems": "Proposed Problems",
+  "no_proposed_problems": "There is no proposed problem",
+  "problems_waiting_for_review": "Problems Waiting for Review",
+  "no_problems_waiting_for_review": "There is no problem waiting for review",
   "not_authorized": "You are not authorized to view this page.",
   "thank_you_for_your_proposal": "Thank you for proposing a problem idea! It may take some days for us to create and review the problem."
 }
