--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -84,5 +84,6 @@
   "problems_waiting_for_review": "Problems Waiting for Review",
   "no_problems_waiting_for_review": "There is no problem waiting for review",
   "not_authorized": "You are not authorized to view this page.",
-  "thank_you_for_your_proposal": "Thank you for proposing a problem idea! It may take some days for us to create and review the problem."
+  "thank_you_for_your_proposal": "Thank you for proposing a problem idea! It may take some days for us to create and review the problem.",
+  "point_diff": "Total point difference"
 }
