frontend: Add note & remove tile id on proposals

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -71,7 +71,7 @@
   "least_voted": "Least Voted",
   "propose_problem": "Proposal",
   "propose_problem_title": "Propose Problems",
-  "propose_problem_description": "You can propose a problem idea by specifying the BGA's table ID, the number of tiles remaining and the placing tile. The table ID is the 9-digit sequence of numbers, which immediately follows the table= in the URL. The number of remaining tiles is the number of tiles shown on the screen for the board in question.",
+  "propose_problem_description": "You can propose a problem idea by specifying the BGA's table ID and the number of tiles remaining. The table ID is the 9-digit sequence of numbers, which immediately follows the table= in the URL. The number of remaining tiles is the number of tiles shown on the screen for the board in question.",
   "tested_by": "tested by",
   "remaining_tile_count": "Number of remaining tiles",
   "remaining_tile_count_placeholder": "e.g. 60",
@@ -79,6 +79,8 @@
   "table_id_placeholder": "e.g. 449689675",
   "propose": "Submit",
   "placing_tile": "Placing tile",
+  "proposal_note": "Note",
+  "proposal_note_placeholder": "A brief description of the board would facilitate the review process.",
   "proposed_problems": "Proposed Problems",
   "no_proposed_problems": "There is no proposed problem",
   "problems_waiting_for_review": "Problems Waiting for Review",
