frontend: Add delete problems

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -88,5 +88,6 @@
   "not_authorized": "You are not authorized to view this page.",
   "thank_you_for_your_proposal": "Thank you for proposing a problem idea! It may take some days for us to create and review the problem.",
   "point_diff": "Total point difference",
-  "publish": "Publish"
+  "publish": "Publish",
+  "del": "Delete"
 }
