--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -89,5 +89,8 @@
   "thank_you_for_your_proposal": "問題の提案をしていただきありがとうございます！問題の作成とレビューには数日程度かかることがあります。",
   "point_diff": "総得点差",
   "publish": "公開する",
-  "del": "削除する"
+  "del": "削除する",
+  "tile_edition": "タイルの種類",
+  "first_edition": "旧版",
+  "second_edition": "新版"
 }
