frontend: Update home page & allow unauthenticated users to see it

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -42,13 +42,13 @@
   "ranking": "Ranking (Top 10)",
   "your_rated_games": "Your Rated Games",
   "see_more": "See More",
-  "description": "Top Carcassonner is a platfrom where you can play Carcassonne against AI.",
+  "description": "Top Carcassonner is a platfrom where you can play Carcassonne against AI or other players and solve daily Carcassonne problems.",
   "calculating_final_points": "Calculating final points...",
   "you": "You",
   "view_replay": "View Replay",
   "image": "Image",
   "random_match": "Random Match",
-  "random_match_description": "In this mode, you can play against a randomly matched player. At the moment, the game results do not affect your rating.",
+  "random_match_description": "In the random match, you can play against a randomly matched player. At the moment, the game results do not affect your rating.",
   "play_random_match": "Search opponents",
   "cancel": "Cancel",
   "searching_opponent": "Searching Opponent ...",
@@ -71,6 +71,7 @@
   "least_voted": "Least Voted",
   "propose_problem": "Proposal",
   "propose_problem_title": "Propose Problems",
+  "propose_problem_short_description": "You can also propose a problem idea by yourself. Utilize this feature if you have encountered a difficult situation of Carcassonne and want to know what other strong players think about it.",
   "propose_problem_description": "You can propose a problem idea by specifying the BGA's table ID and the number of tiles remaining. The table ID is the 9-digit sequence of numbers, which immediately follows the table= in the URL. The number of remaining tiles is the number of tiles shown on the screen for the board in question.",
   "tested_by": "tested by",
   "remaining_tile_count": "Number of remaining tiles",
