--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -42,13 +42,13 @@
   "ranking": "ランキング (Top 10)",
   "your_rated_games": "過去のゲーム",
   "see_more": "すべて見る",
-  "description": "Top Carcassonner は AI とカルカソンヌの対戦ができるプラットフォームです。",
+  "description": "Top Carcassonner は AI や他のプレイヤーとカルカソンヌの対戦ができたり、毎日出題されるカルカソンヌの問題を解いたりできるプラットフォームです。",
   "calculating_final_points": "最終得点を計算しています...",
   "you": "あなた",
   "view_replay": "リプレイを見る",
   "image": "画像",
   "random_match": "ランダムマッチ",
-  "random_match_description": "このモードではランダムに選ばれた他のプレイヤーと対戦することができます。現在、この対戦結果によるレーティングの変動はありません。",
+  "random_match_description": "ランダムマッチではランダムに選ばれた他のプレイヤーと対戦することができます。現在、この対戦結果によるレーティングの変動はありません。",
   "play_random_match": "対戦相手を探す",
   "cancel": "キャンセル",
   "searching_opponent": "対戦相手を探しています ...",
@@ -61,7 +61,7 @@
   "vote_results": "投票結果",
   "created_by": "作成者",
   "problems": "どこ置くの問題",
-  "problems_description": "ここではカルカソンヌの特定の盤面について、自分ならどこに置くかを考えて投票したり、他の人が投票した結果を見たりすることができます。自分の投票を完了すると全員の投票結果が見れるようになります。また、新しい問題は毎日 18 時 (日本時間) に公開されます。",
+  "problems_description": "どこ置くの問題ではカルカソンヌの特定の盤面について、自分ならどこに置くかを考えて投票したり、他の人が投票した結果を見たりすることができます。自分の投票を完了すると全員の投票結果が見れるようになります。また、新しい問題は毎日 18 時 (日本時間) に公開されます。",
   "remaining_tiles": "残りタイル",
   "recent_votes": "最近の投票",
   "problem_list": "問題一覧",
@@ -71,6 +71,7 @@
   "least_voted": "投票の少ない順",
   "propose_problem": "問題案の提供",
   "propose_problem_title": "問題を提案する",
+  "propose_problem_short_description": "どこ置くの問題に出題される問題を提案をすることもできます。自分が悩んだカルカソンヌの盤面があって他の人がどう考えるかを知りたいときなどに活用してください。",
   "propose_problem_description": "BGA のテーブル ID と残りタイル数を指定して問題の提案をすることができます。テーブル ID は URL に含まれている table= の直後の 9 桁の数字列です。また、残りタイル数は該当する盤面において画面に表示されている枚数を指定してください。",
   "tested_by": "テスター",
   "remaining_tile_count": "残りタイル数",
