--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -18,6 +18,12 @@
   "password": "Password",
   "sign_up": "Sign Up",
   "sign_up_here": "Sign Up Here",
+  "forgot_password": "Forgot Password?",
+  "forgot_password_text": "Please provide the email address you used to sign up. We will send you a link to reset your password.",
+  "reset_password": "Reset Password",
+  "reset_password_sent": "We have sent you a link to reset your password.",
+  "back_to_sign_in": "Back to Sign In",
+  "failed_to_send_reset_password_link": "Failed to send a link to reset your password. Please try again later.",
   "failed_to_sign_in_message": "Failed to sign in. Please try again.",
   "ai_must_place": "AI must place",
   "must_place": " must place",
