--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -18,6 +18,12 @@
   "password": "パスワード",
   "sign_up": "登録",
   "sign_up_here": "新規登録",
+  "forgot_password": "パスワードを忘れた場合",
+  "forgot_password_text": "登録時のメールアドレスを入力してください。パスワード再設定用のリンクを送信します。",
+  "reset_password": "パスワードをリセットする",
+  "reset_password_sent": "パスワード再設定用のリンクを送信しました。",
+  "back_to_sign_in": "ログイン画面に戻る",
+  "failed_to_send_reset_password_link": "パスワード再設定用のリンクの送信に失敗しました。時間をあけて再度お試しください。",
   "failed_to_sign_in_message": "ログインに失敗しました。再度お試しください。",
   "ai_must_place": "AI がタイルを配置しています",
   "must_place": "の手番です",
